--- a/css/style.css
+++ b/css/style.css
@@ -84,8 +84,8 @@ body {
   animation: textDisturb 3s infinite;
 }
 @keyframes textDisturb {
-  0%, 100% { letter-spacing: 2px; }
-  50% { letter-spacing: 4px; }
+  0%, 100% { letter-spacing: 2000px; }
+  50% { letter-spacing: 4000px; }
 }
 
 .hero-content p {
@@ -134,6 +134,7 @@ section {
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(280px, 1fr));
   gap: 30px;
+  
 }
 .about-card {
   background: #111;
@@ -148,11 +149,16 @@ section {
 .card-icon {
   font-size: 3rem;
   margin-bottom: 10px;
+  text-shadow: 1px 1px  blue, 21px 21px 0 ;
 }
-
+.about-grid{
+  grid-template-columns: 1fr 1fr;
+}
 /* Featured Content */
 .featured-grid {
-  display: grid;
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
   grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
   gap: 25px;
   margin-top: 40px;
